--- a/ansible/roles/pool/files/tidyWallet.yaml
+++ b/ansible/roles/pool/files/tidyWallet.yaml
@@ -3,14 +3,14 @@ kind: CronJob
 metadata:
   name: tidywallet
 spec:
-  schedule: "0/15 * * * *"
+  schedule: "15 * * * *"
   jobTemplate:
     spec:
       template:
         spec:
           containers:
           - name: tidywallet
-            image: docker.mwgrinpool.com:5001/services:latest
+            image: bitgrinmining/services:latest
             #command: ["sleep", "999"]
             command: ["/usr/local/bin/tidyWallet.py"]
             env:
