--- a/stratum/Cargo.toml
+++ b/stratum/Cargo.toml
@@ -26,3 +26,6 @@ rand = "0.6.5"
 byteorder = "1.3.1"
 redis = "0.9.0"
 queues = "1.0.0"
+failure = "0.1.5"
+grin_core = "1.0.1"
+grin_util = "1.0.1"
