--- a/grin-py/services/config.ini
+++ b/grin-py/services/config.ini
@@ -86,10 +86,17 @@ log_level = WARNING
 check_interval = 10
 max_rebuild_depth = 999
 
-[paymentMaker]
-# Logging
+[paymentEstimator]
 log_dir = /services
 log_level = WARNING
+pool_fee = 0.02
+pplns_window = 60
+
+[paymentMaker]
+log_dir = /services
+log_level = WARNING
+pool_fee = 0.02
+pplns_window = 60
 
 [makePayouts]
 # Location of the grin wallet to pay from
