--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -5,7 +5,7 @@ COPY run.sh /
 WORKDIR /usr/share/logstash/config/
 COPY logstash.yml /usr/share/logstash/config/
 COPY jvm.options /usr/share/logstash/config/
-COPY poolsharefilter.conf /usr/share/logstash/config/
-COPY grinsharefilter.conf /usr/share/logstash/config/
+COPY sharefilter.conf /usr/share/logstash/config/
+COPY poolblockfilter.conf /usr/share/logstash/config/
 
 ENTRYPOINT []
