--- a/rmq/Dockerfile
+++ b/rmq/Dockerfile
@@ -9,6 +9,7 @@ RUN set -ex && \
 #ENV RABBITMQ_PASSWORD rpassword
 
 COPY rabbitmqadmin /
+COPY definitions.json /etc/rabbitmq/
 COPY definitions.json /
 COPY import_config.sh /
 COPY entrypoint.sh /
