--- a/nginx/src/bitgrinpool.stream.conf
+++ b/nginx/src/bitgrinpool.stream.conf
@@ -1,9 +1,16 @@
-#Upstream Stratum Server Pool
+#Upstream Stratum Server Pool - Low Difficulty
 upstream stratum.pool.bitgrin.io {
     server stratum:3333;
 }
 
-#Stratum - NO SSL
+#Upstream Stratum Server Pool - High Difficulty
+upstream stratum-hd.pool.bitgrin.io {
+    server stratum-hd:3333;
+}
+
+# ---- Low Difficulty ----
+
+#Stratum - Low Difficulty - NO SSL
 server {
     # GrinPool private
     listen 3301;
@@ -25,7 +32,7 @@ server {
     proxy_pass stratum.pool.bitgrin.io;
 }
 
-# Stratum - SSL
+# Stratum - Low Difficulty - SSL
 server {
     # GrinPool
     listen 3401 ssl;
@@ -55,3 +62,36 @@ server {
     ssl_session_timeout   4h;
 }
 
+# ---- High Difficulty ----
+#
+#Stratum - High Difficulty - NO SSL
+
+server {
+    # GrinPool
+    listen 4444;
+    listen [::]:4444;
+
+    # Pass the connection to Upstream Server Pool
+    proxy_pass stratum-hd.pool.bitgrin.io;
+}
+
+# Stratum - High Difficulty - SSL
+server {
+    # GrinPool
+    listen 4445 ssl;
+    listen [::]:4445 ssl;
+
+    # Pass the connection to Upstream Server Pool
+    proxy_pass stratum-hd.pool.bitgrin.io;
+    include /etc/nginx/stratum_proxy_params;
+
+    # Cut-n-paste some ssl config code from random website
+    ssl_certificate /etc/certs/letsencrypt/live/pool.bitgrin.io/fullchain.pem;
+    ssl_certificate_key /etc/certs/letsencrypt/live/pool.bitgrin.io/privkey.pem;
+    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+    ssl_protocols SSLv3 TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    ssl_session_cache     shared:SSL:20m;
+    ssl_session_timeout   4h;
+}
