--- a/kube/mysql_svc.yaml
+++ b/kube/mysql_svc.yaml
@@ -32,3 +32,22 @@ spec:
 #    nodePort: 32337
   selector:
     app: mysql
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-read-kylan
+  labels:
+    app: mysql
+spec:
+  type: LoadBalancer
+  loadBalancerIP: 34.76.50.243
+  loadBalancerSourceRanges:
+  - 68.101.220.143/32
+  - 68.107.96.202/32
+  - 108.196.200.233/32
+  ports:
+  - name: mysql
+    port: 3306
+  selector:
+    app: mysql
