updates for v2 api

--- a/nginx/src/bitgrinpool.http.conf
+++ b/nginx/src/bitgrinpool.http.conf
@@ -7,6 +7,10 @@ upstream api.pool.bitgrin.io {
     server poolapi:13423;
 }
 
+upstream apiv2.pool.bitgrin.io {
+    server poolapiv2:3009;
+}
+
 server {
     listen      80;
     listen [::]:80;
@@ -24,9 +28,6 @@ server {
     server_name api.pool.bitgrin.io
 
     server_tokens off;
-
-    #ssl_client_certificate /etc/ssl/certs/cloudflare_origin_rsa.pem;
-    #ssl_verify_client on;
 
     ssl_certificate /etc/certs/letsencrypt/live/pool.bitgrin.io/fullchain.pem;
     ssl_certificate_key /etc/certs/letsencrypt/live/pool.bitgrin.io/privkey.pem;
@@ -48,31 +49,31 @@ server {
     ssl_stapling_verify on;
     resolver 8.8.8.8;
 
+    location /v2 {
+        rewrite  ^/v2/(.*) /$1 break;
+        #security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Proxy to upstream service
+        proxy_pass http://apiv2.pool.bitgrin.io;
+        include /etc/nginx/proxy_params;
+    }
+
     location / {
         #security headers
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Frame-Options "DENY" always;
-        #CSP
-#        add_header Content-Security-Policy "frame-src 'self'; default-src 'self'; script-src 'self' 'unsafe-inline' https://maxcdn.bootstrapcdn.com https://ajax.googleapis.com; img-src 'self'; style-src 'self' https://maxcdn.bootstrapcdn.com; font-src 'self' data: https://maxcdn.bootstrapcdn.com; form-action 'self'; upgrade-insecure-requests;" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
         # Proxy to upstream service
         proxy_pass http://api.pool.bitgrin.io;
         include /etc/nginx/proxy_params;
-
-        # CORS - WIDE OPEN
-#        include /etc/nginx/cors_wide_open;
-#        add_header 'Access-Control-Allow-Origin' '*';
-#        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-#        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-#        add_header 'Access-Control-Allow-Credentials' 'true' always;
-#        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-#        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-#        # required to be able to read Authorization header in frontend
-#        add_header 'Access-Control-Expose-Headers' 'Authorization' always;
-
     }
 }
 
