--- a/logstash/sharefilter.conf
+++ b/logstash/sharefilter.conf
@@ -8,9 +8,8 @@ input {
 
 filter {
   grok {
-    # Feb 04 00:57:53.254 ERRO WorkerShares { id: "2-fIS4fv5n2ykjkwnE", height: 32290, difficulty: 1, shares: {29: Shares { edge_bits: 29, accepted: 4, rejected: 0, stale: 0 }} }
-
-    match => { "message" => "(?<log_timestamp>.+) ERRO WorkerShares { id: \"%{BASE10NUM:worker}-(?<rigid>.+)\", height: %{BASE10NUM:height}, difficulty: %{BASE10NUM:difficulty}, shares: (?<sharedata>.+) }" }
+    # 2019-04-02T17:57:26.722558465+00:00 ERROR grin_pool::pool::pool - WorkerShares { id: "4-YuIc841kcAmxu3a5", rigid: "rig1", agent: "bminer (v15.1.0-2d30b6f)", height: 102078, difficulty: 1, shares: {31: Shares { edge_bits: 31, accepted: 1, rejected: 0, stale: 0 }} }
+    match => { "message" => "(?<log_timestamp>.+) ERROR (?<rust_module>.+) WorkerShares { id: \"%{BASE10NUM:worker}-(?<connectionid>.+)\", rigid: \"(?<rigid>.+)\", workerid: \"(?<workerid>.+)\", agent: \"(?<agent>.+)\", height: %{BASE10NUM:height}, difficulty: %{BASE10NUM:difficulty}, shares: (?<sharedata>.+) }" }
   }
 
   if "_grokparsefailure" in [tags] {
