--- a/stratum/Cargo.toml
+++ b/stratum/Cargo.toml
@@ -14,9 +14,9 @@ jsonrpc-core = "~4.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-slog = { version = "~2.1", features = ["max_level_trace", "release_max_level_trace"] }
-slog-term = "2.1"
-slog-async = "2.1"
+log = "0.4"
+log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
+backtrace = "0.3"
 time = "0.1"
 lazy_static = "0.2"
 toml = "0.4"
