--- a/kube/paymentMaker.yaml
+++ b/kube/paymentMaker.yaml
@@ -15,6 +15,11 @@ spec:
             env:
             - name: PPLNG_WINDOW_SIZE
               value: "60"
+            - name: GRIN_POOL_ADMIN_USER
+              valueFrom:
+                secretKeyRef:
+                  name: grinpool-admin
+                  key: username.txt
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
