--- a/kube/paymentMaker.yaml
+++ b/kube/paymentMaker.yaml
@@ -15,6 +15,8 @@ spec:
             env:
             - name: PPLNG_WINDOW_SIZE
               value: "60"
+            - name: BLOCK_REWARD
+              value: "4.5"
             - name: GRIN_POOL_ADMIN_USER
               valueFrom:
                 secretKeyRef:
